crates/kula-wasm/tests/snapshots/export_graph__example_04_polygamous_family.snap
---
source: crates/kula-wasm/tests/export_graph.rs
expression: json
---
{
  "ok": true,
  "schema": 1,
  "kula": "0.1",
  "graph": {
    "persons": [
      {
        "id": "alice",
        "name": "Alice Sharma",
        "gender": "female",
        "born": {
          "value": "1950-04-12",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "devraj",
        "name": "Devraj Kumar",
        "gender": "male",
        "born": {
          "value": "1948-06-21",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "meera",
        "name": "Meera",
        "gender": "female",
        "born": {
          "value": "1955-03-08",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "priya",
        "name": "Priya Kumar",
        "gender": "female",
        "born": {
          "value": "1994-12-01",
          "precision": "day",
          "circa": false
        }
      }
    ],
    "marriages": [
      {
        "id": "m_devraj_meera",
        "spouses": [
          "devraj",
          "meera"
        ],
        "start": {
          "value": "1990-01-01",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "m_alice_devraj",
        "spouses": [
          "alice",
          "devraj"
        ],
        "start": {
          "value": "1992-02-14",
          "precision": "day",
          "circa": false
        }
      }
    ],
    "parenthoodLinks": [
      {
        "marriageId": "m_alice_devraj",
        "childId": "priya",
        "kind": "biological"
      }
    ]
  }
}
